--- a/package.json
+++ b/package.json
@@ -1,1 +1,7 @@
-{}
+{
+  "dependencies": {
+    "@cljs-oss/module-deps": "^1.1.1",
+    "@google-cloud/bigquery": "^1.0.0",
+    "@google-cloud/storage": "^1.5.2"
+  }
+}
