--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "devDependencies": {
-    "shadow-cljs": "^2.6.5",
-    "source-map-support": "^0.5.9"
+    "shadow-cljs": "^2.6.5"
   },
   "dependencies": {
     "@google-cloud/bigquery": "^1.0.0",
     "@google-cloud/storage": "^1.6.0",
     "bluebird": "^3.5.1",
     "firebase-admin": "^6.0.0",
-    "initial-state": "^0.2.0"
+    "initial-state": "^0.2.0",
+    "source-map-support": "^0.5.9",
+    "ws": "^6.0.0"
   },
   "scripts": {
     "build": "shadow-cljs compile dev",
