--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,11 +2,8 @@ steps:
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install']
   - name: 'gcr.io/grownome/shadow-cljs'
-    args: ['compile', 'prod']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'functions', 'deploy', 'make_image', '--source', 'relesae'
-           '--stage-bucket', 'grownome_fn_staging', 'tigger-topic', 'daily']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'functions', 'deploy', 'subscribe', '--source', 'relesae'
-           '--stage-bucket', 'grownome_fn_staging', '--tigger-topic', 'huginn-tele']
- 
+    args: ['compile', 'test']
+  - name: 'gcr.io/cloud-builders/npm'
+    args: ['run', 'test']
+
+
