--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "scripts": {
     "build": "shadow-cljs compile dev",
-    "prod": "shadow-cljs compile prod"
+    "prod": "shadow-cljs compile prod",
+    "ci": "node local/node-tests-ci.js"
+
   }
 }
