added more config to dev-deployer

--- a/cloudbuild-deploy-dev.yaml
+++ b/cloudbuild-deploy-dev.yaml
@@ -11,7 +11,7 @@ steps:
        cp package* release/
 
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'functions', 'deploy', 'make_image', '--source', 'release', '--stage-bucket', 'grownome_fn_staging', '--trigger-topic', 'daily']
+    args: ['beta', 'functions', 'deploy', 'make_image-dev', '--source', 'release', '--stage-bucket', 'grownome_fn_staging', '--trigger-topic', 'daily']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'functions', 'deploy', 'subscribe', '--source', 'release', '--stage-bucket', 'grownome_fn_staging', '--trigger-topic', 'huginn-tele']
+    args: ['beta', 'functions', 'deploy', 'subscribe-dev', '--source', 'release', '--stage-bucket', 'grownome_fn_staging', '--trigger-topic', 'huginn-tele']
  
